{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 51,
  "lineage": "2a5f01f0-4dbb-2964-3ebe-69370a55337a",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:674095511305:loadbalancer/app/banking-peak-load-staging/517e35ced2161162",
            "arn_suffix": "app/banking-peak-load-staging/517e35ced2161162",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "banking-peak-load-staging-983676688.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:674095511305:loadbalancer/app/banking-peak-load-staging/517e35ced2161162",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "banking-peak-load-staging",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0646312da7ab2b18a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01097374bbe745e98"
              },
              {
                "subnet_id": "subnet-04f9bf9cf61393a72"
              }
            ],
            "subnets": [
              "subnet-01097374bbe745e98",
              "subnet-04f9bf9cf61393a72"
            ],
            "tags": {
              "Name": "banking-peak-load-staging-alb"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "banking-peak-load-staging-alb",
              "Project": "banking-peak-load"
            },
            "vpc_id": "vpc-05eb0f2c95e957acb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:674095511305:listener/app/banking-peak-load-staging/517e35ced2161162/6bed906f1f81b3a0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:674095511305:targetgroup/banking-peak-load-staging-tg/b0d897b47723ff22",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:674095511305:listener/app/banking-peak-load-staging/517e35ced2161162/6bed906f1f81b3a0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:674095511305:loadbalancer/app/banking-peak-load-staging/517e35ced2161162",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Project": "banking-peak-load"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.main",
            "module.alb.aws_lb_target_group.app",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:674095511305:targetgroup/banking-peak-load-staging-tg/b0d897b47723ff22",
            "arn_suffix": "targetgroup/banking-peak-load-staging-tg/b0d897b47723ff22",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/metrics",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:674095511305:targetgroup/banking-peak-load-staging-tg/b0d897b47723ff22",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:674095511305:loadbalancer/app/banking-peak-load-staging/517e35ced2161162"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "banking-peak-load-staging-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Project": "banking-peak-load"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05eb0f2c95e957acb"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674095511305:security-group/sg-0646312da7ab2b18a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0646312da7ab2b18a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "banking-peak-load-staging-alb-sg",
            "name_prefix": "",
            "owner_id": "674095511305",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "banking-peak-load-staging-alb-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "banking-peak-load-staging-alb-sg",
              "Project": "banking-peak-load"
            },
            "timeouts": null,
            "vpc_id": "vpc-05eb0f2c95e957acb"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:674095511305:instance/i-0078c85511b840745",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0078c85511b840745",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a012608aeb97d2a2",
            "private_dns": "ip-10-0-1-151.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.151",
            "public_dns": "ec2-34-207-140-100.compute-1.amazonaws.com",
            "public_ip": "34.207.140.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "staging",
                  "ManagedBy": "terraform",
                  "Project": "banking-peak-load"
                },
                "tags_all": {
                  "Environment": "staging",
                  "ManagedBy": "terraform",
                  "Project": "banking-peak-load"
                },
                "throughput": 125,
                "volume_id": "vol-09df7bb15b9f7f933",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01097374bbe745e98",
            "tags": {
              "Name": "banking-peak-load-staging-app"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "banking-peak-load-staging-app",
              "Project": "banking-peak-load"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-068d14f28840854a5"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.ec2.aws_security_group.app",
            "module.ec2.data.aws_iam_instance_profile.lab",
            "module.ec2.data.aws_region.current",
            "module.ecr.aws_ecr_repository.app",
            "module.elasticache.aws_elasticache_cluster.redis",
            "module.elasticache.aws_elasticache_subnet_group.main",
            "module.elasticache.aws_security_group.redis",
            "module.rds.aws_db_instance.primary",
            "module.rds.aws_db_instance.replica",
            "module.rds.aws_db_subnet_group.main",
            "module.rds.aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:674095511305:targetgroup/banking-peak-load-staging-tg/b0d897b47723ff22-20260506065755380500000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:674095511305:targetgroup/banking-peak-load-staging-tg/b0d897b47723ff22",
            "target_id": "i-0078c85511b840745"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.app",
            "module.ec2.aws_instance.app",
            "module.ec2.aws_security_group.app",
            "module.ec2.data.aws_iam_instance_profile.lab",
            "module.ec2.data.aws_region.current",
            "module.ecr.aws_ecr_repository.app",
            "module.elasticache.aws_elasticache_cluster.redis",
            "module.elasticache.aws_elasticache_subnet_group.main",
            "module.elasticache.aws_security_group.redis",
            "module.rds.aws_db_instance.primary",
            "module.rds.aws_db_instance.replica",
            "module.rds.aws_db_subnet_group.main",
            "module.rds.aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674095511305:security-group/sg-068d14f28840854a5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068d14f28840854a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "banking-peak-load-staging-app-sg",
            "name_prefix": "",
            "owner_id": "674095511305",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "banking-peak-load-staging-app-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "banking-peak-load-staging-app-sg",
              "Project": "banking-peak-load"
            },
            "timeouts": null,
            "vpc_id": "vpc-05eb0f2c95e957acb"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674095511305:security-group/sg-0b59976cc2dff5135",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b59976cc2dff5135",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-068d14f28840854a5"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "banking-peak-load-staging-redis-sg",
            "name_prefix": "",
            "owner_id": "674095511305",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "banking-peak-load-staging-redis-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "banking-peak-load-staging-redis-sg",
              "Project": "banking-peak-load"
            },
            "timeouts": null,
            "vpc_id": "vpc-05eb0f2c95e957acb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:674095511305:security-group/sg-08af067ec89c4a3ab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08af067ec89c4a3ab",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-068d14f28840854a5"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "banking-peak-load-staging-rds-sg",
            "name_prefix": "",
            "owner_id": "674095511305",
            "revoke_rules_on_delete": null,
            "tags": {
              "Name": "banking-peak-load-staging-rds-sg"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "banking-peak-load-staging-rds-sg",
              "Project": "banking-peak-load"
            },
            "timeouts": null,
            "vpc_id": "vpc-05eb0f2c95e957acb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.app"
          ]
        }
      ]
    }
  ]
}